force-app/main/default/objects/InboundCall__c/InboundCall__c.object-meta.xml
<CustomObject>
    <label>Inbound Call</label>
    <nameField>
        <displayFormat>IC-{0000000000}</displayFormat>
        <label>Inbound Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>