force-app/main/default/objects/InboundCall__c/fields/Data_2__c.field-meta.xml
<CustomField>
    <fullName>Data_2__c</fullName>
    <label>Data 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>