force-app/main/default/objects/InboundCall__c/fields/Data_3__c.field-meta.xml
<CustomField>
    <fullName>Data_3__c</fullName>
    <label>Data 3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>