force-app/main/default/objects/InboundCall__c/fields/Data_4__c.field-meta.xml
<CustomField>
    <fullName>Data_4__c</fullName>
    <label>Data 4</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>