force-app/main/default/objects/InboundCall__c/fields/Outdated__c.field-meta.xml
<CustomField>
    <fullName>Outdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outdated</label>
    <type>Checkbox</type>
</CustomField>