force-app/main/default/objects/InboundCall__c/fields/Webservice_Log__c.field-meta.xml
<CustomField>
    <fullName>Webservice_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Webservice Log</label>
    <referenceTo>WebserviceLog__c</referenceTo>
    <relationshipLabel>Inbound Calls</relationshipLabel>
    <relationshipName>InboundCalls</relationshipName>
    <type>Lookup</type>
</CustomField>