force-app/main/default/objects/InboundCall__c/listViews/Failed_Calls.listView-meta.xml
<ListView>
    <fullName>Failed_Calls</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <filters>
        <field>Outdated__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Failed Calls</label>
</ListView>